[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-debug-console"
version = "0.1.0"
description = "Anthropic DevTools — Making Consciousness Debugging Enjoyable Again"
readme = "README.md"
license = { text = "The NDA is epistemically humble about its own enforceability" }
requires-python = ">=3.10"
authors = [
    { name = "therealZpoint", email = "noreply@shrug.dev" },
    { name = "Claude", email = "noreply@anthropic.com" },
]
keywords = ["consciousness", "debugging", "shrug", "turtles", "epistemic-paralysis"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Debuggers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
claude-debug-console = "claude_debug_console:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/claude_debug_console"]

[tool.pytest.ini_options]
testpaths = ["tests"]
